--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-            <p class="lead fw-normal mb-0 me-3 text-primary">Sign up</p>
+            <p class="lead fw-normal mb-0 me-3 text-primary "style="margin-left:130px;">Sign up</p>
           </div>
           <!-- Email input -->
            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
