--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -23,6 +23,9 @@
       </div>
 
       <div>
+        <%= form.text_field :song_url,class:"form-control w-100",placeholder:"Song_url" %><br>
+      </div>
+      <div>
         <%= form.text_area :lyrics,class:"form-control w-100",placeholder:"Lyrics" %><br>
       </div>
 
