--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require bootstrap
  *= require_tree .
  *= require_self
+
  */
+@import "bulma";
 .btn{
     color: #FBFBFB !important;
 }
@@ -31,4 +33,10 @@ height: calc(100% - 73px);
 .h-custom {
 height: 100%;
 }
+}
+
+.card-img-top {
+    width: 100%;
+    height: 25vw;
+    object-fit: cover;
 }
