--- a/app/views/layouts/_display.html.erb
+++ b/app/views/layouts/_display.html.erb
@@ -27,7 +27,7 @@
       </ul>
     </div>
     <form class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search for albums" aria-label="Search"  style= "border-radius:10px;width:400px" value=<%= params[:q] || " " %> >
+        <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search for albums/songs" aria-label="Search"  style= "border-radius:10px;width:400px" value=<%= params[:q] || " " %> >
         <button class="btn btn-success" style= "margin-left:5px;margin-right:15px" type="submit">Search</button>
       </form>
   </div>
