--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -9,10 +9,8 @@
       <div class="card" style="width: 100%;">
         <img class="card-img-top" src="https://www.newstatesman.com/wp-content/uploads/sites/2/2021/11/GettyImages-1197828995-1038x778.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title text-center font-weight-bold text-secondary"><%= song.title %></h5>
-          <p class="card-text text-center"><%= song.duration %></p>
-          <%= link_to 'Show', song_path(song),class:"btn btn-primary text-decoration-none " %>
-        
+          <h5 class="card-title text-center font-weight-bold text-info">Title: <%= song.title %></h5>
+          <p class="card-text text-center text-danger font-italic">Duration: <%= song.duration %></p>
           <div class="center aligned ui container text-center">
             <% if current_user.playlists.present?%>
               <%= form_with url: insert_playlists_path , local: true do |form| %>
@@ -26,42 +24,35 @@
               <br>
             <%end%>
           </div>
+          <%= link_to 'Show', song_path(song),class:"btn btn-primary text-decoration-none " %><br>
+        
+          
         </div>
       </div>
     </div>
   <%end%>
 </div>
   <%else%>
-
-   <table class="table",style="font-family:serif;">
-    <thead>
-      <tr>
-        <!-- <th scope="col">  </th> -->
-        <th scope="col">Title</th>
-        <th scope="col">Duration</th>
-        <!-- <th scope="col">Lyrics</th> -->
-        <th scope="col">  </th>
-        <th scope="col">  </th>
-        <th scope="col">  </th>
-       </tr>
-    </thead>
-    <tbody>
-      <!-- <%# @album=current_artist.albums.where(:album_id=>params[:album_id]) %> -->
-      <% @songs.each do |s| %>
-      <tr>
-        <td><%= s.title %></td>
-          <!-- <td><%#= album.artist_id %></td> -->
-        <td><%= s.duration %></td>
-        <!-- <td><%#= s.lyrics %></td> -->
-
-        <td><%= link_to 'Show',song_path(s),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= link_to 'Update',edit_song_path(s,:album_id=>params[:album_id]),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= button_to 'Remove',song_path(s,:album_id=>params[:album_id]),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm"%></td>
-      </tr>
-      <%end%>
-    </tbody>
-  </table>
-  <%#end%>
-  <%= link_to "Add new song", new_song_path(:artist_id=>params[:artist_id],:album_id=>params[:album_id]),class:"btn btn-success text-decoration-none",style:"margin-left:1300px;width:300px" %>
+  <div class="row mx-auto" >
+     <% @songs.each do |song| %>
+     <div class="col-sm-4">
+      <div class="card" style="width: 100%;">
+        <img class="card-img-top" src="https://www.newstatesman.com/wp-content/uploads/sites/2/2021/11/GettyImages-1197828995-1038x778.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center font-weight-bold text-info">Title: <%= song.title %></h5>
+          <p class="card-text text-center text-danger font-italic">Duration: <%= song.duration %></p>
+          
+          <%= link_to 'Show',song_path(song),class:"btn btn-primary btn-sm text-decoration-none"%>
+        <%= link_to 'Update',edit_song_path(song,:album_id=>params[:album_id]),class:"btn btn-primary btn-sm text-decoration-none",style:"margin-left:390px;"%>
+        <%= button_to 'Remove',song_path(song,:album_id=>params[:album_id]),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm",style:"margin-left:230px;"%>
+        
+          
+        </div>
+      </div>
+    </div>
+  <%end%>
+</div>
+<br>
+  <%= link_to "Add new song", new_song_path(:artist_id=>params[:artist_id],:album_id=>params[:album_id]),class:"btn btn-success text-decoration-none",style:"margin-left:750px;width:300px" %>
  
 <%end %>
