--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -10,13 +10,10 @@
         <img class="card-img-top rounded mx-auto d-block " src="https://www.newstatesman.com/wp-content/uploads/sites/2/2021/11/GettyImages-1197828995-1038x778.jpg" alt="Card image cap">
         <%end%>
         <div class="card-body">
-          <h5 class="card-title text-center font-weight-bold text-secondary"><%= album.title %></h5>
-          <p class="card-text text-center"><%= album.description %></p>
-          <p class="card-text text-center"><%= album.language %></p>
-
-          <%= link_to 'Show', album_path(album),class:"btn btn-primary text-decoration-none " %>
-        
-          <div class="center aligned ui container">
+          <h5 class="card-title text-center font-weight-bold text-info">Title: <%= album.title %></h5>
+          <p class="card-text text-center text-danger font-italic">Genre: <%= album.description %></p>
+          <p class="card-text text-center">Language: <%= album.language %></p>
+          <div class="center aligned ui container text-center">
               <% if current_user.playlists.present?%>
                 <%= form_with url: insertalbum_playlists_path , local: true do |form| %>
                 <%= hidden_field_tag :album_id, album.id %>
@@ -29,6 +26,10 @@
                 <br>
               <%end%>
           </div>
+
+          <%= link_to 'Show', album_path(album),class:"btn btn-primary text-decoration-none " %><br>
+        
+          
         </div>
       </div>
     </div>
@@ -36,41 +37,33 @@
     </div>
 
   <%else%>
-
-   <table class="table",style="font-family:serif;">
-    <thead>
-      <tr>
-        <!-- <th scope="col">  </th> -->
-        <th scope="col">Title</th>
-        <th scope="col">Description</th>
-        <th scope="col">Language</th>
-        <th scope="col">  </th>
-        <th scope="col">  </th>
-        <th scope="col">  </th>
-        <th scope="col">   </th>
-        <th colspan="3"></th> 
-       </tr>
-    </thead>
-    <tbody>
-      
-      <!-- <#% if current_artist.albums.present? %> -->
-       
-      <% current_artist.albums.each do |album| %>
-      <tr>
-        <td><%= album.title %></td>
-          <!-- <td><%#= album.artist_id %></td> -->
-        <td><%= album.description %></td>
-        <td><%= album.language %></td>
-
-        <td><%= link_to 'Show',album_path(album),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= link_to 'Update',edit_album_path(album),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= button_to 'Remove',album_path(album),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm text-decoration-none"%></td>
-        <td><%= link_to 'Songs',songs_path(album_id: album.id),class:"btn btn-primary btn-sm text-decoration-none" %></td>
-      </tr>
+  <div class="row mx-auto" >
+     <% current_artist.albums.each do |album| %>
+     <div class="col-sm-4">
+      <div class="card" style="width: 100%;">
+        <% if album.image_url.present? %>
+        <img class="card-img-top rounded mx-auto d-block" src="<%= album.image_url%>" alt="Card image cap">
+        <% else %>
+        <img class="card-img-top rounded mx-auto d-block " src="https://www.newstatesman.com/wp-content/uploads/sites/2/2021/11/GettyImages-1197828995-1038x778.jpg" alt="Card image cap">
+        <%end%>
+        <div class="card-body">
+          <h5 class="card-title text-center font-weight-bold text-info">Title: <%= album.title %></h5>
+          <p class="card-text text-center text-danger font-italic">Genre: <%= album.description %></p>
+          <p class="card-text text-center">Language: <%= album.language %></p>
+          <%= link_to 'Show',album_path(album),class:"btn btn-primary btn-sm text-decoration-none"%></td>
+          <%= link_to 'Update',edit_album_path(album),class:"btn btn-primary btn-sm text-decoration-none ",style:"margin-left:390px;"%></td>
+          <%= button_to 'Remove',album_path(album),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm text-decoration-none",style:"margin-left:230px;"%>
+          <br>
+          <%= link_to 'Songs',songs_path(album_id: album.id),class:"btn btn-primary btn-sm text-decoration-none",style:"margin-left:250px;" %>
+        
+          
+        </div>
+      </div>
+    </div>
       <%end%>
-    </tbody>
-  </table>
-  <%= link_to "Add new album", new_album_path(:artist_id=>params[:id]),class:"btn btn-success text-decoration-none",style:"margin-left:1300px;width:300px" %>
+    </div>
+    <br>
+  <%= link_to "Add new album", new_album_path(:artist_id=>params[:id]),class:"btn btn-success text-decoration-none",style:"margin-left:700px;width:300px" %>
   <%end%>
 
 
