--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,36 +1,57 @@
+
 <%= render 'layouts/display' %>
-<div class="p-4 shadow-4 rounded-3" style="background-color: white;font-family:serif;">
-  
-  <h2><%= @artist.name %></h2>
-  <p>
-    <%= @artist.region %>
-  </p>
-
-  <hr class="my-4" />
-
-  
-  <%if current_artist.image_url.present? %>
-        <p class="card-text",style="color:grey;font-size:22px;"><strong> <%= image_tag current_artist.image_url.to_s ,:size => "100x100" %></strong></p>
-    
-      <%else%>
-      <p class="card-text",style="color:grey;font-size:22px;"><strong><%= image_tag "https://cdn.dribbble.com/users/295355/screenshots/3878696/ghostdribbblefinalnewanimation_still_2x.gif?compress=1&resize=400x300".to_s  ,:size => "100x100" %></p>
-        <%end%>
-  
-
- <!-- <%# if @artist.image_url.present? %>
-<strong>Image:</strong>
-  <div class="d-flex flex-row col-3">
-  <p>
-  
-  <%#= image_tag @artist.image_url.to_s ,alt:'image' ,:size => "100x100" %>
-  </p>  
+<section class="vh-100" style="background-color: #f4f5f7;">
+  <div class="container py-6 h-100 w-150">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-lg-6 mb-4 mb-lg-0">
+        <div class="card mb-3" style="border-radius: .5rem;">
+          <div class="row g-0">
+            <div class="col-md-4 gradient-custom text-center text-white"
+              style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+              <% if current_artist.image_url.present? %>
+                <img src="<%= current_artist.image_url %>"
+                alt="Avatar" class="img-fluid my-5" style="width: 100px;" />
+              <%else%>
+                <img src="https://cdn.dribbble.com/users/295355/screenshots/3878696/ghostdribbblefinalnewanimation_still_2x.gif?compress=1&resize=400x300"
+                alt="Avatar" class="img-fluid my-5 " style="width: 150px;" />
+              <%end%>
+              <h5>My Profile!!</h5>
+              <i class="far fa-edit mb-5"></i>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body p-4">
+                <h6 class="text-danger">Information</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6 class="text-info font-weight-bold">Name</h6>
+                    <p class="text-dark"><%= current_artist.name %></p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6 class="text-info font-weight-bold">Region</h6>
+                    <p class="text-dark"><%= current_artist.region %></p>
+                  </div>
+                </div>
+                <h6 class="text-danger">Others</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6 class="text-info font-weight-bold">Album Count</h6>
+                    <p class="text-drak"><%= current_artist.albums.count %></p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6 class="text-info font-weight-bold">Email</h6>
+                    <p class="text-dark"><%= current_artist.email %></p>
+                  </div>
+                  
+                </div>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  <%#= link_to  'Add new image', new_image_path,class:"btn btn-primary btn-sm"%>
-<%#else%>
-  <%#= link_to  'Add image', new_image_path,class:"btn btn-primary btn-sm"%>
-<%#end%> -->
-  <% if alert %>
-    <p class="alert alert-danger mt-4"><%= alert %></p>
-  <% end %> 
-</div>
+</section>
+
