--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -32,9 +32,15 @@
      <%# end %> --> 
 
       <form class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search for albums" aria-label="Search" style= "border-radius:10px;width:400px" value=<%= params[:q] || " " %> >
+        <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search for albums/songs" aria-label="Search" style= "border-radius:10px;width:400px" value=<%= params[:q] || " " %> >
         <button class="btn btn-success" style= "margin-left:5px;margin-right:15px" type="submit">Search</button>
       </form>
+
+      <!-- <%#= form_tag search_index_path,method: :get do %>
+        <%#= text_field_tag :album,params[:album] %>
+        <%#= text_field_tag :song,params[:song] %>
+        <%#= submit_tag "Search",name: nil %>
+      <%# end %> -->
   </div>
 </nav>
 
@@ -147,7 +153,7 @@
                     <p class="text-truncate mb-4 mb-md-0">
                         <%= album.description %>
                     </p>
-                    <i>Album:
+                    <i>Artist:
                         <%= album.artist.name %><br>
                     </i>
                   </div>
@@ -161,7 +167,7 @@
                               <%= form_with url: insertalbum_playlists_path , local: true do |form| %>
                               <%= hidden_field_tag :album_id, album.id %>
                               <%= hidden_field_tag :user_id, current_user.id %>
-                               <%= form.select(:playlist_id, Playlist.all.collect {|c| [ c.title, c.id ] }, { include_blank: true }) %>
+                               <%= form.select(:playlist_id, current_user.playlists.all.collect {|c| [ c.title, c.id ] }, { include_blank: true }) %>
                                 <br>
                                 <br>
                                 <%= form.submit "Add to playlist ",class:"btn btn-primary" %>
