--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,33 +1,26 @@
 <%= render 'layouts/display' %>
 
 <%if user_signed_in?%>
+ 
+    <div class="row mx-auto" >
+     <% current_user.playlists.each do |playlist| %>
+     <div class="col-sm-4">
+      <div class="card" style="width: 100%;">
+        <img class="card-img-top" src="https://www.newstatesman.com/wp-content/uploads/sites/2/2021/11/GettyImages-1197828995-1038x778.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center font-weight-bold text-info">Title: <%= playlist.title %></h5>
+          <p class="card-text text-center text-danger font-italic">Description: <%= playlist.description %></p>
+          
+          <%= link_to 'Show', playlist_path(playlist),class:"btn btn-primary text-decoration-none " %>
+          <%= link_to 'Update',edit_playlist_path(playlist),class:"btn btn-primary text-decoration-none",style:"margin-left:390px;"%><br>
+          <%= button_to 'Remove',playlist_path(playlist),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm",style:"margin-left:230px"%>
+        </div>
+      </div>
+    </div>
+  <%end%>
+</div>
+<br>
+  <%= link_to 'Create new Playlist',new_playlist_path(:user_id => params[:id]),class:"btn btn-success text-decoration-none text-center",style:"width:450px;margin-left:650px;"%>
 
-
-  <table class="table">
-    <thead>
-      <tr>
-        <!-- <th scope="col">   </th> -->
-        <th scope="col">Title</th>
-        <!-- <th scope="col">Artist</th> -->
-        <th scope="col">Description</th>
-        <th scope="col">   </th>
-        <th colspan="3"></th> 
-      </tr>
-    </thead>
-
-    <tbody>
-      <% current_user.playlists.each do |playlist| %>
-      <tr>
-        <td><%= playlist.title %></td>
-        <td><%= playlist.description %></td>
-
-        <td><%= link_to 'Show',playlist_path(playlist),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= link_to 'Update',edit_playlist_path(playlist),class:"btn btn-primary btn-sm text-decoration-none"%></td>
-        <td><%= button_to 'Remove',playlist_path(playlist),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm"%></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-     <%= link_to 'Create new Playlist',new_playlist_path(:user_id => params[:id]),class:"btn btn-success text-decoration-none",style:"width:450px;margin-left:400px;"%>
-  <br>
-  <% end %>
+<%end%>
+  
