--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,38 +1,42 @@
 "<%= render 'layouts/display' %>
 
-<div class="card ", style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)max-width: 300px;max-height:800px;margin: auto;text-align: center;font-family: arial;">
-  <!-- <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light" style="margin-top:20px;">
-    <#% if @product.image.attached? %>
-        <p>
-        <%#= image_tag(@product.image, style:"width:600px;height:400px;border-radius:10px")%>
-        </p>
-    <%# end%>
-  </div> -->
-  <div class="card-body">
-    <h5 class="card-title"><strong><%= @song.title %></strong></h5>
-    <p class="card-text"><%= @song.duration %></p>
-    <p class="card-text",style= "color:grey;font-size:22px;"><strong><%= @song.lyrics %></strong></p>
-   <% if @song.song_url.present? %>
-    <p class="card-text",style= "color:grey;font-size:22px;"><audio src="<%= @song.song_url %>" controls></audio></p>
-    <% else %>
-    <p class="card-text",style= "color:grey;font-size:22px;"><audio src="https://isaiminisong.com/play.php?file=VGFtaWwgMjAxNSBTb25ncy9OYWFudW0gUm93ZHlkaGFhbi9LYW5uYWFuZSBLYW5uZS5tcDM=&fileid=11839" controls></audio></p>
-    <%end%>
-    <%if user_signed_in?%>
-      <div class="center aligned ui container">
-                            <% if current_user.playlists.present?%>
-                              <%= form_with url: insert_playlists_path , local: true do |form| %>
-                              <%= hidden_field_tag :song_id, @song.id %>
-                              <%= hidden_field_tag :user_id, current_user.id %>
-                               <%= form.select(:playlist_id, current_user.playlists.all.collect {|c| [ c.title, c.id ] }, { include_blank: true }) %>
-                                <br>
-                                <br>
-                                <%= form.submit "Add to playlist ",class:"btn btn-primary" %>
-                              <% end %>
-                              <br>
-                          <%end%>
-                            </div>
-                            
-   <%end%>
 
+<section class="vh-100" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-12 col-xl-4">
+
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body text-center">
+            <div class="mt-3 mb-4">
+              <img src="https://www.liveabout.com/thmb/DNPhPFtAm2PDIFbcexbdNY2XG-g=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/pop-music-57bce3863df78c87634ea806.jpg"
+                class="rounded-circle img-fluid" style="width: 100px;" />
+            </div>
+            <h4 class="mb-2"><%= @song.artist.name%></h4>
+            <br>
+            <% if @song.song_url.present? %>
+                <p class="card-text",style= "color:grey;font-size:22px;"><audio src="<%= @song.song_url %>" controls></audio></p>
+            <% else %>
+                <p class="card-text",style= "color:grey;font-size:22px;"><audio src="https://isaiminisong.com/play.php?file=VGFtaWwgMjAxNSBTb25ncy9OYWFudW0gUm93ZHlkaGFhbi9LYW5uYWFuZSBLYW5uZS5tcDM=&fileid=11839" controls></audio></p>
+            <%end%>
+            <div class="d-flex justify-content-between text-center mt-5 mb-2">
+              <div>
+                <p class="mb-2 h5 text-danger"><%= @song.title %></p>
+                <p class="text-muted mb-0 text-dark font-weight-bold">Song Title</p>
+              </div>
+              <div class="px-3">
+                <p class="mb-2 h5 text-danger"><%= @song.duration %></p>
+                <p class="text-muted mb-0 text-dark font-weight-bold">Song Duration</p>
+              </div>
+              <div>
+                <p class="mb-2 h5 text-danger"><%= @song.lyrics %></p>
+                <p class="text-muted mb-0 text-dark font-weight-bold">Song Lyrics</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
-</div>
+</section>
