--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -161,6 +161,5 @@
   <% end %>
 
 <%else%>
-
-< Empty >
+<h5 class="card-title text-center font-weight-bold text-info">No results found</h5>
 <%end%>
