--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -57,8 +57,10 @@
                       <div class="d-flex flex-column mt-2">
                             <%= link_to 'Show', song_path(song), class:"btn btn-primary text-decoration-none" %> 
                           </div>
+                          <% if artist_signed_in? %>
                             <%= button_to  'Remove', album_path(:artist_id=>current_artist.id,:song_id => song.id ,:album_id => @album.id),
                                     method: :delete, data: { confirm: 'Are you sure?' } ,class:"btn btn-danger  mt-2"%>   
+                          <% end %>
                         </div>
                     </div>
                     
